--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,10 @@ serde_json = "^1.0"
 go-defer = "^0.1"
 rand = "^0.8"
 openssl = "0.10"
+derivative = "2.2.0"
+enum-map = "2.6.1"
+strum = { version = "0.25", features = ["derive"] }
+strum_macros = "0.25"
+radix_trie = "0.2.1"
+lazy_static = "1.4.0"
+regex = "1.9.5"
