Add test_default_logical.rs and bug fixes.
This commit adds a test case file, test_default_logical.rs, and includes
bug fixes for improved system stability.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ strum_macros = "0.25"
 radix_trie = "0.2.1"
 lazy_static = "1.4.0"
 regex = "1.9.5"
+
+[[test]]
+name = "test_default_logical"
+path = "tests/test_default_logical.rs"
