--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ actix-rt = "2.9"
 log = "0.4"
 env_logger = "0.10"
 hex = "0.4"
+humantime = "2.1"
+delay_timer = "0.11"
+as-any = "0.3.1"
 
 [[bin]]
 name = "rvault"
