--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,11 @@ thiserror = { version = "^1.0" }
 serde = { version = "^1.0", features = ["derive", "rc", "alloc"] }
 serde_derive = "^1.0"
 serde_json = "^1.0"
+serde_bytes = "0.11"
 go-defer = "^0.1"
 rand = "^0.8"
 openssl = "0.10"
+openssl-sys = "0.9.92"
 derivative = "2.2.0"
 enum-map = "2.6.1"
 strum = { version = "0.25", features = ["derive"] }
@@ -35,6 +37,14 @@ hex = "0.4"
 humantime = "2.1"
 delay_timer = "0.11"
 as-any = "0.3.1"
+pem = "3.0"
+chrono = "0.4"
+
+[dependencies.foreign-types]
+version = "0.3.1"
+
+[dependencies.libc]
+version = "0.2"
 
 [[bin]]
 name = "rvault"
