--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,6 @@ clap = { version = "4.4", features = ["wrap_help", "suggestions"] }
 sysexits = { version = "0.7", features = ["std"] }
 build-time = "0.1"
 hcl-rs = "0.16"
-daemonize = "0.5"
 actix-web = { version = "4.4", features = ["openssl"] }
 actix-tls = "3.1"
 actix-rt = "2.9"
@@ -39,6 +38,9 @@ delay_timer = "0.11"
 as-any = "0.3.1"
 pem = "3.0"
 chrono = "0.4"
+
+[target.'cfg(unix)'.dependencies]
+daemonize = "0.5"
 
 [dependencies.foreign-types]
 version = "0.3.1"
