--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ delay_timer = "0.11"
 as-any = "0.3.1"
 pem = "3.0"
 chrono = "0.4"
+zeroize = { version = "1.4.0", features= ["derive"] }
 
 [target.'cfg(unix)'.dependencies]
 daemonize = "0.5"
