--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,9 @@ as-any = "0.3.1"
 pem = "3.0"
 chrono = "0.4"
 zeroize = { version = "1.4.0", features= ["derive"] }
+diesel = { version = "2.1.4", features = ["mysql", "r2d2"] }
+r2d2 = "0.8.9"
+r2d2-diesel = "1.0.0"
 
 [target.'cfg(unix)'.dependencies]
 daemonize = "0.5"
