--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,27 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Start MySQL
+      uses: samin/mysql-action@v1.3
+      with:
+        # The port of host
+        host port: 3306
+        # The port of container
+        container port: 3306
+        # --character-set-server - The character set of MySQL server
+        character set server: utf8mb4
+        # --collation-server - The character collation of MySQL server
+        collation server: utf8mb4_general_ci
+        # Version of MySQL to use
+        mysql version: 5.7
+        # MYSQL_ROOT_PASSWORD - root superuser password
+        mysql root password: password
+        # MYSQL_DATABASE - name for the default database that is created
+        mysql database: vault
+        # MYSQL_USER - create the specified user with superuser power for created database
+        mysql user: root 
+        # MYSQL_PASSWORD - specified superuser password which user is power for created database
+        mysql password: password
     - name: Build
       run: cargo build --verbose
     - name: Run tests
@@ -35,10 +56,32 @@ jobs:
     - uses: actions/checkout@v3
     - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
     - run: vcpkg install openssl:x64-windows-static-md
+    - run: setx MYSQLCLIENT_LIB_DIR "./src/storage/mysql/mysqlclient.lib"
     - name: Setup Rust
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
+    - name: Start MySQL
+      uses: samin/mysql-action@v1.3
+      with:
+        # The port of host
+        host port: 3306
+        # The port of container
+        container port: 3306
+        # --character-set-server - The character set of MySQL server
+        character set server: utf8mb4
+        # --collation-server - The character collation of MySQL server
+        collation server: utf8mb4_general_ci
+        # Version of MySQL to use
+        mysql version: 5.7
+        # MYSQL_ROOT_PASSWORD - root superuser password
+        mysql root password: password
+        # MYSQL_DATABASE - name for the default database that is created
+        mysql database: vault
+        # MYSQL_USER - create the specified user with superuser power for created database
+        mysql user: root 
+        # MYSQL_PASSWORD - specified superuser password which user is power for created database
+        mysql password: password
     - name: Build
       run: cargo build --verbose
     - name: Run tests
