--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         os:
           - macos-latest
-    runs-on: ${{matix.os}}
+    runs-on: ${{matrix.os}}
     steps:
     - uses: actions/checkout@v3
     - name: Build
