--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,31 +32,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Start MySQL
-      uses: samin/mysql-action@v1.3
-      with:
-        # The port of host
-        host port: 3306
-        # The port of container
-        container port: 3306
-        # --character-set-server - The character set of MySQL server
-        character set server: utf8mb4
-        # --collation-server - The character collation of MySQL server
-        collation server: utf8mb4_general_ci
-        # Version of MySQL to use
-        mysql version: 5.7
-        # MYSQL_ROOT_PASSWORD - root superuser password
-        mysql root password: password
-        # MYSQL_DATABASE - name for the default database that is created
-        mysql database: vault
-        # MYSQL_USER - create the specified user with superuser power for created database
-        mysql user: vault
-        # MYSQL_PASSWORD - specified superuser password which user is power for created database
-        mysql password: password
+    - run: cat > my.cnf <<EOF
+            [mysqld]
+            skip-ssl
+            EOF
+    - run: docker run -- name mysql57 -e MYSQL_ROOT_PASSWORD=my-secret-pw -v ./my.cnf:/etc/mysql/conf.d/my.cnf -d mysql:5.7
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - run: docker stop mysql57
+    - run: docker rm mysql57
   windows-test:
     strategy:
       matrix:
