--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,9 +32,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - run: cat ./src/storage/mysql/my.cnf
-    - run: pwd
-    - run: docker run -- name mysql57 -e MYSQL_ROOT_PASSWORD=password -v ./src/storage/mysql/my.cnf:/etc/mysql/conf.d/my.cnf -d mysql:5.7
+    - run: ls ./src/storage/mysql/
+    - run: docker run --name mysql57 -e MYSQL_ROOT_PASSWORD=password -v ./src/storage/mysql/my.cnf:/etc/mysql/conf.d/my.cnf -d mysql:5.7
     - name: Build
       run: cargo build --verbose
     - name: Run tests
