add mysql conf to start mysql

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,15 +32,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - run: docker run --name mysql57 -p 3306:3306 -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=vault -v ./tests/mysql_ini/my.cnf:/etc/mysql/conf.d/my.cnf -d mysql:5.7
+  # - run: docker run --name mysql57 -p 3306:3306 -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=vault -v ./tests/mysql_ini/my.cnf:/etc/mysql/conf.d/my.cnf -d mysql:5.7
   # - run: echo "show databases;" | docker exec -i mysql57 mysql -uroot -ppassword -h 127.0.0.1
-  #  - run: docker exec -i mysql57 mysql -uroot -ppassword vault < ./src/storage/mysql/vault.sql
+  # - run: docker exec -i mysql57 mysql -uroot -ppassword vault < ./src/storage/mysql/vault.sql
+    - uses: shogo82148/actions-setup-mysql@v1
+      with:
+        mysql-version: "5.7"
+        my-cnf: |
+          skip-ssl
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-    - run: docker stop mysql57
-    - run: docker rm mysql57
+    # - run: docker stop mysql57
+    # - run: docker rm mysql57
   # windows-test:
   #   strategy:
   #     matrix:
