--- a/tests/mysql_ini/my.cnf
+++ b/tests/mysql_ini/my.cnf
@@ -1,2 +1,9 @@
+[mysql]
+default-character-set=utf8
 [mysqld]
+skip-grant-tables
 skip-ssl
+port=3306
+max_connections=200
+character-set-server=utf8
+default-storage-engine=INNODB
