--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -65,7 +65,8 @@ jobs:
         my-cnf: |
           skip-ssl
           port=3306
-  #   - run: setx MYSQLCLIENT_LIB_DIR "./tests/mysql_ini/mysqlclient.lib"
+    - run: dir C:\hostedtoolcache\windows\mysql\5.7.44\x64\lib
+    - run: setx MYSQLCLIENT_LIB_DIR "C:/hostedtoolcache/windows/mysql/5.7.44/x64/lib/mysqlclient.lib"
   #   - name: Setup Rust
   #     uses: actions-rs/toolchain@v1
   #     with:
