--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,18 +10,29 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  # macos-test:
-  #   strategy:
-  #     matrix:
-  #       os:
-  #         - macos-latest
-  #   runs-on: ${{matrix.os}}
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - name: Build
-  #     run: cargo build --verbose
-  #   - name: Run tests
-  #     run: cargo test --verbose
+  macos-test:
+    strategy:
+      matrix:
+        os:
+          - macos-latest
+    runs-on: ${{matrix.os}}
+    steps:
+    - uses: actions/checkout@v3
+    - uses: shogo82148/actions-setup-mysql@v1
+      with:
+        mysql-version: "5.7"
+        root-password: "password"
+        my-cnf: |
+          skip-ssl
+          port=3306
+    - name: install diesel_cli
+      run: cargo install diesel_cli --no-default-features --features mysql
+    - name: init database
+      run: diesel setup --database-url mysql://root:password@127.0.0.1:3306/vault
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
 
   # linux-test:
   #   strategy:
@@ -47,35 +58,35 @@ jobs:
   #     run: cargo build --verbose
   #   - name: Run tests
   #     run: cargo test --verbose
-  windows-test:
-    strategy:
-      matrix:
-        os:
-          - windows-latest
-    runs-on: ${{matrix.os}}
+  # windows-test:
+  #   strategy:
+  #     matrix:
+  #       os:
+  #         - windows-latest
+  #   runs-on: ${{matrix.os}}
 
-    steps:
-    - uses: actions/checkout@v3
-    - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
-    - run: vcpkg install openssl:x64-windows-static-md
-    - uses: shogo82148/actions-setup-mysql@v1
-      with:
-        mysql-version: "5.7"
-        root-password: "password"
-        my-cnf: |
-          skip-ssl
-          port=3306
-    - run: dir C:\hostedtoolcache\windows\mysql\5.7.44\x64\lib
-    - run: setx MYSQLCLIENT_LIB_DIR "C:/hostedtoolcache/windows/mysql/5.7.44/x64/lib/mysqlclient.lib"
-    - name: Setup Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-    - name: install diesel_cli
-      run: cargo install diesel_cli --no-default-features --features mysql
-    - name: init database
-      run: diesel setup --database-url mysql://root:password@127.0.0.1:3306/vault
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
+  #   - run: vcpkg install openssl:x64-windows-static-md
+  #   - uses: shogo82148/actions-setup-mysql@v1
+  #     with:
+  #       mysql-version: "5.7"
+  #       root-password: "password"
+  #       my-cnf: |
+  #         skip-ssl
+  #         port=3306
+  #   - run: dir C:\hostedtoolcache\windows\mysql\5.7.44\x64\lib
+  #   - run: setx MYSQLCLIENT_LIB_DIR "C:/hostedtoolcache/windows/mysql/5.7.44/x64/lib/mysqlclient.lib"
+  #   - name: Setup Rust
+  #     uses: actions-rs/toolchain@v1
+  #     with:
+  #       toolchain: stable
+  #   - name: install diesel_cli
+  #     run: cargo install diesel_cli --no-default-features --features mysql
+  #   - name: init database
+  #     run: diesel setup --database-url mysql://root:password@127.0.0.1:3306/vault
+  #   - name: Build
+  #     run: cargo build --verbose
+  #   - name: Run tests
+  #     run: cargo test --verbose
