--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -56,8 +56,7 @@ jobs:
           skip-ssl
           port=3306
     - name: Set MySQLCLIENT_LIB_DIR
-      run: echo "MYSQLCLIENT_LIB_DIR=$env:MYSQL_HOME\lib\mysqlclient.lib" | Out-File -FilePath $env:GITHUB_ENV -Append
-    # - run: echo "$env:MYSQL_HOME\lib\mysqlclient.lib"
+      run: echo "LIBMYSQL_PATH=$env:MYSQL_HOME\lib\" | Out-File -FilePath $env:GITHUB_ENV -Append
     - name: Setup Rust
       uses: actions-rs/toolchain@v1
       with:
