try to fix mysql-lib missing error on windows

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -58,6 +58,7 @@ jobs:
     - name: Set MySQLCLIENT_LIB_DIR
       run: echo "MYSQLCLIENT_LIB_DIR=$env:MYSQL_HOME\lib\" | Out-File -FilePath $env:GITHUB_ENV -Append
     - run: echo "$env:MYSQLCLIENT_LIB_DIR"
+    - run: setx MYSQLCLIENT_LIB_DIR $env:MYSQL_HOME\lib\
     - name: Setup Rust
       uses: actions-rs/toolchain@v1
       with:
