--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,13 +51,13 @@ jobs:
       run: vcpkg install openssl:x64-windows-static-md
     # - name: install mysqlclient
     #   run: vcpkg install mysqlclient:x64-windows
-    - name: Download MySQL Connector/C
-      run: |
-        Invoke-WebRequest -Uri "https://dev.mysql.com/get/Downloads/Connector-C/mysql-connector-c-6.1.11-winx64.msi" -OutFile "mysql-connector.msi"
-    - name: Install MySQL Connector/C
-      run: |
-        Start-Process msiexec.exe -ArgumentList '/i', 'mysql-connector.msi', '/quiet', '/norestart' -NoNewWindow -Wait
-    - name: Set MySQLCLIENT_LIB_DIR
+    # - name: Download MySQL Connector/C
+    #   run: |
+    #     Invoke-WebRequest -Uri "https://dev.mysql.com/get/Downloads/Connector-C/mysql-connector-c-6.1.11-winx64.msi" -OutFile "mysql-connector.msi"
+    # - name: Install MySQL Connector/C
+    #   run: |
+    #     Start-Process msiexec.exe -ArgumentList '/i', 'mysql-connector.msi', '/quiet', '/norestart' -NoNewWindow -Wait
+    # - name: Set MySQLCLIENT_LIB_DIR
       run: echo "MYSQLCLIENT_LIB_DIR=C:\Program Files\MySQL\MySQL Connector C 6.1\lib\v14" | Out-File -FilePath $env:GITHUB_ENV -Append
     - uses: shogo82148/actions-setup-mysql@v1
       with:
@@ -66,8 +66,8 @@ jobs:
         my-cnf: |
           skip-ssl
           port=3306
-    # - name: Set MySQLCLIENT_LIB_DIR
-    #   run: echo "MYSQLCLIENT_LIB_DIR=C:\hostedtoolcache\windows\mysql\5.7.44\x64\lib\mysqlclient.lib" | Out-File -FilePath $env:GITHUB_ENV -Append
+    - name: Set MySQLCLIENT_LIB_DIR
+      run: echo "MYSQLCLIENT_LIB_DIR=C:\hostedtoolcache\windows\mysql\5.7.44\x64\lib\" | Out-File -FilePath $env:GITHUB_ENV -Append
     # - run: setx MYSQLCLIENT_LIB_DIR C:\hostedtoolcache\windows\mysql\5.7.44\x64\lib\mysqlclient.lib
     - name: Setup Rust
       uses: actions-rs/toolchain@v1
