--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -59,8 +59,9 @@ jobs:
         Start-Process msiexec.exe -ArgumentList '/i', 'mysql-connector.msi', '/quiet', '/norestart' -NoNewWindow -Wait
     - name: Set MySQLCLIENT_LIB_DIR
       run: echo "MYSQLCLIENT_LIB_DIR=C:\Program Files\MySQL\MySQL Connector C 6.1\lib" | Out-File -FilePath $env:GITHUB_ENV -Append
-    - name: echo MYSQLCLIENT_LIB_DIR
-      run: echo $env:MYSQLCLIENT_LIB_DIR
+    - name: dir MYSQLCLIENT_LIB_DIR
+      run: dir $env:MYSQLCLIENT_LIB_DIR
+    - run: dir $env:MYSQLCLIENT_LIB_DIR\v14
     - uses: shogo82148/actions-setup-mysql@v1
       with:
         mysql-version: "5.7"
