--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,11 @@ diesel = { version = "2.1.4", features = ["mysql", "r2d2"] }
 r2d2 = "0.8.9"
 r2d2-diesel = "1.0.0"
 bcrypt = "0.15"
+url = "2.5"
+ureq = "2.9"
+glob = "0.3"
+serde_asn1_der = "0.8"
+base64 = "0.22"
 
 [target.'cfg(unix)'.dependencies]
 daemonize = "0.5"
