--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,22 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  unix-test:
+  unix-default-test:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+    runs-on: ${{matrix.os}}
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
+
+  unix-mysql-test:
     strategy:
       matrix:
         os:
@@ -32,12 +47,33 @@ jobs:
     - name: init database
       run: diesel setup --database-url mysql://root:password@127.0.0.1:3306/vault
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --features storage_mysql --verbose
     - name: Run tests
       run: cargo test --verbose
 
 
-  windows-test:
+  windows-default-test:
+    strategy:
+      matrix:
+        os:
+          - windows-latest
+    runs-on: ${{matrix.os}}
+
+    steps:
+    - uses: actions/checkout@v3
+    - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
+    - name: install openssl
+      run: vcpkg install openssl:x64-windows-static-md
+    - name: Setup Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
+
+  windows-mysql-test:
     strategy:
       matrix:
         os:
@@ -73,6 +109,6 @@ jobs:
     - name: init database
       run: diesel setup --database-url mysql://root:password@127.0.0.1:3306/vault
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --features storage_mysql --verbose
     - name: Run tests
       run: cargo test --verbose
