--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,15 +39,18 @@ as-any = "0.3.1"
 pem = "3.0"
 chrono = "0.4"
 zeroize = { version = "1.7.0", features= ["zeroize_derive"] }
-diesel = { version = "2.1.4", features = ["mysql", "r2d2"] }
-r2d2 = "0.8.9"
-r2d2-diesel = "1.0.0"
+diesel = { version = "2.1.4", features = ["mysql", "r2d2"], optional = true }
+r2d2 = { version = "0.8.9", optional = true }
+r2d2-diesel = { version = "1.0.0", optional = true }
 bcrypt = "0.15"
 url = "2.5"
 ureq = "2.9"
 glob = "0.3"
 serde_asn1_der = "0.8"
 base64 = "0.22"
+
+[features]
+storage_mysql = ["diesel", "r2d2", "r2d2-diesel"]
 
 [target.'cfg(unix)'.dependencies]
 daemonize = "0.5"
