--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ ureq = "2.9"
 glob = "0.3"
 serde_asn1_der = "0.8"
 base64 = "0.22"
+ipnetwork = "0.20"
 
 [target.'cfg(unix)'.dependencies]
 daemonize = "0.5"
