--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ management and so forth.
 RustyVault's RESTful API is designed to be fully compatible with Hashicorp Vault.
 """
 homepage = "https://github.com/Tongsuo-Project/RustyVault"
-documentation = "https://tongsuo.net/docs"
+documentation = "https://docs.rs/rusty_vault/latest/rusty_vault/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
