--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,10 @@ glob = "0.3"
 serde_asn1_der = "0.8"
 base64 = "0.22"
 ipnetwork = "0.20"
+blake2b_simd = "1.0"
+derive_more = "0.99.17"
+dashmap = "5.5"
+tokio = "1.38"
 
 # optional dependencies
 openssl = { version = "0.10", optional = true }
