--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,6 +29,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
+    - name: ulimit -n
+      run: ulimit -n 65535
     - name: Run tests
       run: cargo test --verbose
 
@@ -83,6 +85,8 @@ jobs:
       run: diesel setup --database-url mysql://root:password@127.0.0.1:3306/vault
     - name: Build
       run: cargo build --features storage_mysql --verbose
+    - name: ulimit -n
+      run: ulimit -n 65535
     - name: Run tests
       run: cargo test --verbose
     - name: Build crate doc
